src/snapshots/sqlc__test__select__alias.snap
---
source: src/test.rs
expression: rs
---
pub struct ARows {
    pub title: String,
}
pub async fn a(
    c: &impl tokio_postgres::GenericClient,
) -> Result<Vec<ARows>, tokio_postgres::Error> {
    c.query("SELECT f.title FROM films AS f", &[])
        .await
        .map(|rs| { rs.into_iter().map(|r| ARows { title: r.get(0) }).collect() })
}
