src/snapshots/sqlc__test__select__qualify_projection.snap
---
source: src/test.rs
expression: rs
---
pub struct ARows {
    pub title: String,
}
pub async fn a(
    c: &impl tokio_postgres::GenericClient,
) -> Result<Vec<ARows>, tokio_postgres::Error> {
    c.query("SELECT films.title FROM films", &[])
        .await
        .map(|rs| { rs.into_iter().map(|r| ARows { title: r.get(0) }).collect() })
}
